samples/_failures_safe/1761693258_cf47da_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c2eb35c.c: In function ‘main’:
./samples/SAFE/__tmp_8c2eb35c.c:152:37: error: expected ‘)’ at end of input
  152 |         if (scanf("%d %d %d", &u, &v
      |                  ~                  ^
      |                                     )
./samples/SAFE/__tmp_8c2eb35c.c:152:9: error: expected declaration or statement at end of input
  152 |         if (scanf("%d %d %d", &u, &v
      |         ^~
./samples/SAFE/__tmp_8c2eb35c.c:152:9: error: expected declaration or statement at end of input
